index modified commit

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             A simple platform to manage and explore campus events
             such as workshops, seminars, and cultural programs.
         </p>
+        <p>Modified locally</p>
         <button onclick="showMessage()">Explore Events</button>
         <p id="message"></p>
     </div>
